@@ -2,26 +2,21 @@ package xin.vanilla.narcissus.network.packet;
 
 import lombok.Getter;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.StreamCodec;
-import net.minecraft.network.protocol.PacketFlow;
-import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
-import net.neoforged.neoforge.network.handling.IPayloadContext;
+import xin.vanilla.banira.common.network.BaniraPacketBuffer;
+import xin.vanilla.banira.common.network.BaniraNetworkContext;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.jetbrains.annotations.NotNull;
 import xin.vanilla.banira.common.data.KeyValue;
 import xin.vanilla.banira.common.network.SplitPacket;
 import xin.vanilla.banira.common.util.DateUtils;
-import xin.vanilla.banira.internal.network.BaniraStreamCodecs;
-import xin.vanilla.narcissus.Identifier;
 import xin.vanilla.narcissus.data.PlayerAccess;
 import xin.vanilla.narcissus.data.SafeWorldCoordinate;
 import xin.vanilla.narcissus.data.TeleportRecord;
 import xin.vanilla.narcissus.data.player.PlayerTeleportData;
+import xin.vanilla.narcissus.internal.network.NarcissusNbtPacketCodec;
+import xin.vanilla.narcissus.internal.client.NarcissusClientSyncState;
 import xin.vanilla.narcissus.network.NetworkPacket;
 
 import java.util.*;
@@ -29,15 +24,9 @@ import java.util.stream.Collectors;
 
 @Getter
 public class PlayerDataSyncToClient extends SplitPacket
-        implements CustomPacketPayload,
-        SplitPacket.MergeableSplitPacket<PlayerDataSyncToClient>,
+        implements SplitPacket.MergeableSplitPacket<PlayerDataSyncToClient>,
         SplitPacket.SplittableSplitPacket<PlayerDataSyncToClient>,
         NetworkPacket {
-
-    public static final Type<PlayerDataSyncToClient> TYPE =
-            new Type<>(Identifier.id().create("player_data_sync"));
-    public static final StreamCodec<RegistryFriendlyByteBuf, PlayerDataSyncToClient> STREAM_CODEC =
-            BaniraStreamCodecs.registryBuf(PlayerDataSyncToClient::toBytes, PlayerDataSyncToClient::new);
 
     private final UUID playerUUID;
     private final Date lastCardTime;
@@ -68,9 +57,9 @@ public class PlayerDataSyncToClient extends SplitPacket
         this.tpCountdownTag = data.writeTeleportCountdownToNbt();
     }
 
-    public PlayerDataSyncToClient(FriendlyByteBuf buffer) {
+    public PlayerDataSyncToClient(BaniraPacketBuffer buffer) {
         super(buffer);
-        this.playerUUID = buffer.readUUID();
+        this.playerUUID = buffer.readUuid();
         this.lastCardTime = DateUtils.format(buffer.readUtf());
         this.lastTpTime = DateUtils.format(buffer.readUtf());
         this.teleportCard = buffer.readInt();
@@ -78,13 +67,14 @@ public class PlayerDataSyncToClient extends SplitPacket
         this.teleportRecords = new ArrayList<>();
         int size = buffer.readInt();
         for (int i = 0; i < size; i++) {
-            this.teleportRecords.add(TeleportRecord.readFromNBT(Objects.requireNonNull(buffer.readNbt())));
+            this.teleportRecords.add(TeleportRecord.readFromNBT(NarcissusNbtPacketCodec.read(buffer)));
         }
 
         this.homeCoordinate = new HashMap<>();
         int homeSize = buffer.readInt();
         for (int i = 0; i < homeSize; i++) {
-            this.homeCoordinate.put(new KeyValue<>(buffer.readUtf(), buffer.readUtf()), SafeWorldCoordinate.fromTag(Objects.requireNonNull(buffer.readNbt())));
+            this.homeCoordinate.put(new KeyValue<>(buffer.readUtf(), buffer.readUtf()),
+                    SafeWorldCoordinate.fromTag(NarcissusNbtPacketCodec.read(buffer)));
         }
 
         this.defaultHome = new HashMap<>();
@@ -92,11 +82,11 @@ public class PlayerDataSyncToClient extends SplitPacket
         for (int i = 0; i < defaultSize; i++) {
             this.defaultHome.put(buffer.readUtf(), buffer.readUtf());
         }
-        this.accessTag = buffer.readNbt();
+        this.accessTag = NarcissusNbtPacketCodec.read(buffer);
         if (this.accessTag == null) {
             this.accessTag = new CompoundTag();
         }
-        this.tpCountdownTag = buffer.readNbt();
+        this.tpCountdownTag = NarcissusNbtPacketCodec.read(buffer);
         if (this.tpCountdownTag == null) {
             this.tpCountdownTag = new CompoundTag();
         }
@@ -104,10 +94,10 @@ public class PlayerDataSyncToClient extends SplitPacket
 
     public PlayerDataSyncToClient(List<PlayerDataSyncToClient> packets) {
         super();
-        this.playerUUID = packets.getFirst().playerUUID;
-        this.lastCardTime = packets.getFirst().lastCardTime;
-        this.lastTpTime = packets.getFirst().lastTpTime;
-        this.teleportCard = packets.getFirst().teleportCard;
+        this.playerUUID = packets.get(0).playerUUID;
+        this.lastCardTime = packets.get(0).lastCardTime;
+        this.lastTpTime = packets.get(0).lastTpTime;
+        this.teleportCard = packets.get(0).teleportCard;
         this.teleportRecords = packets.stream()
                 .map(PlayerDataSyncToClient::getTeleportRecords)
                 .flatMap(Collection::stream)
@@ -117,7 +107,7 @@ public class PlayerDataSyncToClient extends SplitPacket
                 .map(PlayerDataSyncToClient::getHomeCoordinate)
                 .flatMap(map -> map.entrySet().stream())
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (v1, v2) -> v1));
-        this.defaultHome = packets.getFirst().defaultHome;
+        this.defaultHome = packets.get(0).defaultHome;
         CompoundTag mergedAccess = packets.get(0).accessTag;
         this.accessTag = mergedAccess != null ? mergedAccess.copy() : new CompoundTag();
         CompoundTag mergedCd = packets.get(0).tpCountdownTag;
@@ -137,42 +127,36 @@ public class PlayerDataSyncToClient extends SplitPacket
         this.tpCountdownTag = new CompoundTag();
     }
 
-    @Override
-    public @NotNull Type<? extends CustomPacketPayload> type() {
-        return TYPE;
-    }
-
-    public void toBytes(FriendlyByteBuf buffer) {
+    public void toBytes(BaniraPacketBuffer buffer) {
         super.toBytes(buffer);
-        buffer.writeUUID(playerUUID);
+        buffer.writeUuid(playerUUID);
         buffer.writeUtf(DateUtils.toDateTimeString(this.lastCardTime));
         buffer.writeUtf(DateUtils.toDateTimeString(this.lastTpTime));
         buffer.writeInt(this.teleportCard);
         buffer.writeInt(this.teleportRecords.size());
         for (TeleportRecord record : this.teleportRecords) {
-            buffer.writeNbt(record.writeToNBT());
+            NarcissusNbtPacketCodec.write(buffer, record.writeToNBT());
         }
         buffer.writeInt(this.homeCoordinate.size());
         for (Map.Entry<KeyValue<String, String>, SafeWorldCoordinate> entry : this.homeCoordinate.entrySet()) {
             buffer.writeUtf(entry.getKey().key());
             buffer.writeUtf(entry.getKey().value());
-            buffer.writeNbt(entry.getValue().toTag());
+            NarcissusNbtPacketCodec.write(buffer, entry.getValue().toTag());
         }
         buffer.writeInt(this.defaultHome.size());
         for (Map.Entry<String, String> entry : this.defaultHome.entrySet()) {
             buffer.writeUtf(entry.getKey());
             buffer.writeUtf(entry.getValue());
         }
-        buffer.writeNbt(this.accessTag != null ? this.accessTag : new CompoundTag());
-        buffer.writeNbt(this.tpCountdownTag != null ? this.tpCountdownTag : new CompoundTag());
+        NarcissusNbtPacketCodec.write(buffer, this.accessTag != null ? this.accessTag : new CompoundTag());
+        NarcissusNbtPacketCodec.write(buffer, this.tpCountdownTag != null ? this.tpCountdownTag : new CompoundTag());
     }
 
-    public static void handle(PlayerDataSyncToClient packet, IPayloadContext ctx) {
-        ctx.enqueueWork(() -> {
-            if (ctx.flow() == PacketFlow.CLIENTBOUND) {
-                ClientSide.handle(packet);
-            }
-        });
+    public static void handle(PlayerDataSyncToClient packet, BaniraNetworkContext ctx) {
+        if (ctx.isClientSide()) {
+            ctx.enqueueWork(() -> ClientSide.handle(packet));
+        }
+        ctx.markHandled();
     }
 
     @Override
@@ -235,10 +219,7 @@ public class PlayerDataSyncToClient extends SplitPacket
 
     @OnlyIn(Dist.CLIENT)
     private static final class ClientSide {
-        private static final Logger LOGGER = LogManager.getLogger();
-
-        private ClientSide() {
-        }
+        public static final Logger LOGGER = LogManager.getLogger();
 
         public static void handle(PlayerDataSyncToClient packet) {
             net.minecraft.client.player.LocalPlayer player = net.minecraft.client.Minecraft.getInstance().player;
@@ -246,6 +227,7 @@ public class PlayerDataSyncToClient extends SplitPacket
                 try {
                     PlayerTeleportData clientData = PlayerTeleportData.getData(player);
                     clientData.copyFrom(getData(packet));
+                    NarcissusClientSyncState.markPlayerDataReceived();
                     LOGGER.debug("Client: Player data received successfully.");
                 } catch (Exception ignored) {
                     LOGGER.debug("Client: Player data received failed.");
